--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<div id="container">
 	
 		<div id="logo">
-			Poznaj Linuxa :)
+			Poznaj Linuxa TEST TEST TEST:)
 		</div>
 		
 		<div id="menu">
-			<div class="option">Strona główna</div>
+			<div class="option">Strona TEEEST główna</div>
 			<div class="option">Dystrybucje</div>
 			<div class="option">Instalacja</div>
 			<div class="option">Polecenia</div>
