--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 		
 		<div id="menu">
-			<div class="option">Strona główna</div>
+			<div class="option">Strona TEEEEST główna</div>
 			<div class="option">Dystrybucje</div>
 			<div class="option">Instalacja</div>
 			<div class="option">Polecenia</div>
